--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Companies</h1>
 
-
+<div>
+industries
+</div>
 <ul>
   <% @companies.each do |company_name, id| %>
     <li><%= link_to company_name, record_path(id) %></li>
