データカラムの修正

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -4,6 +4,8 @@
 industries
 </div>
 
+<%= link_to "csv upload", new_record_path %>
+
 <div class="index-body">
  <div class="industry-list">
     <ul>
