--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,10 +1,13 @@
 <h1><%= @record.company_name %></h1>
 
 <h2>Business Partners</h2>
-<ul>
+<div>
+<ul class="business-partner-index">
   <% @related_records.each do |related_record| %>
     <li>
-      <%= link_to related_record.business_partner, partner_details_record_path(related_record) %>
+       <%= link_to related_record.business_partner, partner_details_record_path(related_record) %>
+       <span class='small-date'>(<%= related_record.article_date.strftime('%Y/%m') %>),　 </span>
     </li>
   <% end %>
 </ul>
+</div>
