URL ジャンプの修正

--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -27,7 +27,7 @@
 
 
 
-   <%= link_to "#{@record.url}", @record.url %> <br><br>
+<%= link_to "#{@record.url}", @record.url, target: "_blank" %> <br><br>
    <p><%= @record.article_date %></p>
    <%= @record.city %>,<%= @record.country %> <br>
    <%= @record.sub_industry %>(Sub-industry)<br><br>
