--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,19 +18,19 @@
         <h1 class="grid-6"><a href="/">Open Innobation Database</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-          <span><%= current_user.name %>
+          <span><%= current_user.nickname %>
             <ul class="user__info">
               <li>
-                <%= link_to "マイページ", "/users/#{current_user.id}" %>
-                <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
+                <%= link_to "My Page", "/users/#{current_user.id}" %>
+                <%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete } %>
               </li>
             </ul>
           </span>
           </div>
         <% else %>
           <div class="grid-6">
-            <%= link_to "ログイン", new_user_session_path, class: "post" %>
-            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+            <%= link_to "Log In", new_user_session_path, class: "post" %>
+            <%= link_to "New User", new_user_registration_path, class: "post" %>
           </div>
         <% end %>
       </div>
