--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -57,7 +57,7 @@ h5,
 h6,
 body {
   line-height: 1.57;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.03em;
   font-size: 16px;
   color: #666;
   font-family: 'Poppins', sans-serif;
@@ -114,6 +114,7 @@ body {
   border: 1px solid #ccc; 
   padding: 10px;
   z-index: 10; 
+  font-size: 12px;
 }
 .bp-detail-left p{
   font-size: 12px;
