--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -39,24 +39,19 @@
    </div>
 
    <div class="comment-box">
-   <div class="comment">
-      <h4>comment</h4>
-      <% @comments.each do |comment| %>
-        <p>
-          <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
-          <%= comment.text %>
-        </p>
-      <% end %>
-    </div>
-   </div>
-   <div class="comment-write">
-<%# if user_signed_in? %>
-  <%= form_with(model: [@record, @comment], local: true) do |form| %>
-    <%= form.text_area :text, placeholder: "comment", rows: "2" %>
-    <%= form.submit "SEND" %>
+<div class="comment">
+  <h4>comment</h4>
+
+  <% if @comment && @comment.text.present? %>
+    <p><%= @comment.text %></p>
+    <%= link_to 'Edit', edit_record_comment_path(@record, @comment), class: 'btn btn-edit' %>
+  <% else %>
+    <p>No comment available.</p>
+    <%= link_to 'Create', new_record_comment_path(@record), class: 'btn btn-create' %>
   <% end %>
-<%# else %>
-<%# end %>
+</div>
+
+   <div class="comment-write">
    </div>
  </div>
  </div>
