--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -140,8 +140,21 @@ body {
 .comment-box{
   width: 100%;
   margin-top: 25px;
-  background-color: #FFFFFF;
-  height: 130px;
+  height: 140px;
+}
+
+.comment123{
+  display: flex;
+  height: 30px;
+}
+.comment1,.comment2,.comment3{
+  background-color: #f0af8c;
+  height: 24px;
+  margin: 5px;
+}
+.comment4{
+  background-color: #f0af8c;
+  height:100px;
 }
 .comment-write{
   width: 100%;
