--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -49,10 +49,10 @@
       <div class="comment3">
         <%= @record.comment3%> 
       </div>
-          <%= link_to 'Edit', edit_record_comment_path(@record), class: 'btn btn-edit' %>
+          <%= link_to 'Edit', edit_record_path(@record), class: 'btn btn-edit' %>
     </div>
 <div class="comment4">
-  <h4>comment</h4>
+  <h4>note by Sozo members</h4>
     <p><%= @record.comment4 %></p>
     </div>
 
