--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -5,7 +5,7 @@
 <ul class="business-partner-index">
   <% @related_records.each do |related_record| %>
     <li>
-       <%= link_to related_record.business_partner, partner_details_record_path(related_record) %>
+      <%= link_to related_record.business_partner, partner_details_record_path(related_record), data: { turbo: false } %>
        <span class='small-date'>(<%= related_record.article_date.strftime('%Y/%m') %>),　 </span>
     </li>
   <% end %>
