--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -56,7 +56,7 @@ h4,
 h5,
 h6,
 body {
-  line-height: 1.57;
+  line-height: 1.6;
   letter-spacing: 0.03em;
   font-size: 16px;
   color: #666;
@@ -142,30 +142,75 @@ body {
   width: 100%;
   margin-top: 25px;
   background-color: #FFFFFF;
-  height: 130px;
-}
-.comment-box{
-  width: 100%;
-  margin-top: 25px;
-  height: 140px;
+  height: 150px;
 }
 
 .comment123{
   display: flex;
   height: 30px;
   justify-content:space-evenly;
+  margin-bottom: 10px; 
 }
 .comment1,.comment2,.comment3{
-  background-color: #8cf0be;
-  border-color: #747474;
+  border: 1px solid #bcbaba; 
   border-radius: 5px;
   width: 140px;
-  height: 24px;
+  height: 35px;
   margin: 5px;
+  padding: 4px; 
+}
+.comment1 textarea,
+.comment2 textarea,
+.comment3 textarea {
+    width: 100%; 
+    height: 31px;
+    border:  1px solid #f09815; 
+    background-color: transparent; 
+    font-size: 14px; 
+    padding: 0; 
 }
 .comment4{
-  background-color: #8cf0be;
+  border: 1px solid #bcbaba; 
   height:100px;
+  border-radius: 5px; 
+  padding: 10px; 
+}
+.comment4 textarea {
+  width: 100%;
+  height: calc(100% - 10px); 
+  border:  1px solid #f09815; 
+  background-color: transparent;
+  font-size: 14px;
+  padding: 0;
+}
+.btn-edit {
+  background-color: #20b62d;
+  color: #ffffff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-top: 5px; 
+}
+
+.btn-edit:hover {
+  background-color: #26a724;
+}
+
+.btn-primary {
+  background-color: #f3aa18ef;
+  color: #ffffff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-top: 5px; 
+}
+
+.btn-primary:hover {
+  background-color: #d67610;
 }
 .comment-write{
   width: 100%;
