--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -40,6 +40,40 @@ header.header div.header__bar.row div.grid-6 a.post {
   margin-left: 10px;
 }
 
+.btn-user {
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 14px; 
+  font-weight: 600;
+  color: #333; 
+  background-color: #e6e6e6;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s, transform 0.2s;
+  margin-right: 10px;
+}
+
+.btn-user:hover {
+  background-color: #d4d4d4;
+  transform: scale(1.05); 
+}
+
+.btn-user:active {
+  transform: scale(1);
+}
+
+.btn-user.signup {
+  background-color: #f2dede; 
+}
+
+.btn-user.signup:hover {
+  background-color: #e6bdbd; 
+}
+
+
 /* ヘッダーの記述ここまで */
 
 body {
@@ -74,6 +108,17 @@ body {
   background-color: #FFFFFF;
   height: 460px;
   width: 300px;
+}
+.company-list-upper {
+ border-bottom: 1px solid #dcf5ead8;
+  text-align: center; 
+  margin-bottom: 2px;
+}
+
+.no-underline {
+  margin: 0 10px; 
+  text-decoration: none;
+  display: inline-block; 
 }
 
 /* indexのコメント欄 */
