--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
           </div>
         <% else %>
           <div class="grid-6">
-            <%= link_to "Log in", new_user_session_path, class: "post" %>
-            <%= link_to "Sign up", new_user_registration_path, class: "post" %>
+            <%= link_to "Log in", new_user_session_path, class: "btn-user" %>
+            <%= link_to "Sign up", new_user_registration_path, class: "btn-user signup " %>
           </div>
         <% end %>
       </div>
