show画面の業種表示

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,4 +1,4 @@
-<h1>業種を入力する＞<%= link_to @record.company_name,record_path(@record)%></h1>
+<h1><%=@record.company_industry%>＞<%= link_to @record.company_name,record_path(@record)%></h1>
 
 <h2>Business Partners</h2>
 <div>
