--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -1,4 +1,4 @@
-<h1>業種を入力する＞<%= link_to @record.company_name,record_path(@record)%>＞<%=@record.business_partner%></h1>
+<h6><%=@record.company_industry%>＞<%= link_to @record.company_name,record_path(@record)%>＞<%=@record.business_partner%></h6>
 <div class="bp-detail-body">
   <div class="bp-detail-left">
 
