--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -169,8 +169,17 @@ h6{
 }
 
 /* business partner詳細画面 */
+.previous-next{
+  text-align: right;
+  margin-right: 60px;
+  margin-left: 30px;
+}
+.previous-next a{
+ text-decoration: none;
+ font-size: 20px;
+}
 .bp-detail-body{
-  margin: 40px;
+  margin: 20px,40px;
   display: flex;
 }
 .bp-detail-left{
