--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,10 @@
         <h1 class="grid-6"><a href="/">Open Innobation Database</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
-          <span><%= current_user.nickname %>
             <ul class="user__info">
               <li>
-                <%= link_to "My Page", "/users/#{current_user.id}" %>
-                <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+              <%# <%= link_to ##%>
+                <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-user signup"  %>
               </li>
             </ul>
           </span>
@@ -31,7 +30,7 @@
         <% else %>
           <div class="grid-6">
             <%= link_to "Log in", new_user_session_path, class: "btn-user" %>
-            <%= link_to "Sign up", new_user_registration_path, class: "btn-user signup " %>
+            <%= link_to "Sign up", new_user_registration_path, class: "btn-user signup" %>
           </div>
         <% end %>
       </div>
