--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -167,6 +167,91 @@ list-style-type: disc;
   width: 360px;
 }
 
+/* admin画面 */
+.csv-upload{
+  margin-top: 80px;
+  margin-left:  40px;
+}
+.csv-upload p{
+ font-size: 24px;
+}
+.csv-upload-btn{
+  background-color:gray;
+  color: #ffffff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-top: 5px;
+  margin-left: 20px;
+}
+.user-list{
+  margin: 40px;
+}
+.user-list h1{
+  font-size: 24px;
+}
+/* テーブルのスタイリング */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+}
+
+table, th, td {
+  border: 1px solid #ddd;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px 12px;
+}
+
+/* ヘッダーのスタイリング */
+thead th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+/* マウスホバー時の行のハイライト */
+tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+/* フォームとボタンのスタイリング */
+form {
+  display: inline-block; /* チェックボックスとボタンを横並びにする */
+}
+
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.delete-btn {
+  display: inline-block;
+  background-color: #f44336;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
 
 /* 詳細画面 */
 .business-partner-index{
