--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,19 @@
-<h1>User List</h1>
+<div class="csv-upload">
+<p>・csv upload</p>
+<%= link_to "upload", new_record_path, class:"csv-upload-btn" %>
+</div>
+
+<div class="user-list">
+<h1>・User List</h1>
 
 <table>
   <thead>
     <tr>
       <th>Email</th>
-      <th>Nickname</th>
-      <th>Approved</th>
-      <th>Admin</th>
-      <th>Actions</th>
+      <th> Nickname</th>
+      <th> Approved</th>
+      <th> Admin</th>
+      <th> Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -28,9 +34,10 @@
           <% end %>
         </td>
         <td>
-          <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?' } %>
+        <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, class: "delete-btn" %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
