--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,7 +34,7 @@
           <% end %>
         </td>
         <td>
-        <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, class: "delete-btn" %>
+    <%= link_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?', turbo: "false" }, class: "delete-btn" %>
         </td>
       </tr>
     <% end %>
