--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,7 +34,8 @@
           <% end %>
         </td>
         <td>
-   <%= link_to 'Delete', user_path(user), data: { turbo_method: :delete, confirm: 'Are you sure you want to delete this user?', turbo: "false" }, class: "delete-btn" %>
+   <%= button_to 'Delete', user_path(user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?', turbo: "false" }, class: "delete-btn" %>
+
 
         </td>
       </tr>
