--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,14 @@
-<h2>Sign up</h2><br>
+<div class="signup-container">
+  <h2>Sign up</h2><br>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "signup-form" }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
   <div class="field">
-    <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
+    <%= f.label :nickname %><em>(6 characters maximum)</em>
     <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -20,7 +21,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
@@ -28,3 +29,4 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+</div>
