--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,16 +1,6 @@
 <h1>Upload CSV</h1>
 
-<% if flash[:alert] %>
-  <div class="alert alert-danger">
-    <%= flash[:alert] %>
-  </div>
-<% end %>
-
-<% if flash[:notice] %>
-  <div class="alert alert-success">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
+  <%= render 'shared/error_messages', model:@record %>
 
 <%= form_for @record, html: { multipart: true } do |f| %>
   <%= f.file_field :csv %>
