--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
       <header class="header">
       <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">Open Innobation Database</a></h1>
+        <h1 class="grid-6"><a href="/">Open Innovation Database</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
             <ul class="user__info">
