--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -42,14 +42,12 @@ header.header div.header__bar.row div.grid-6 a.post {
   display: inline-left;
   margin-left: 10px;
 }
-
-.btn-user {
+.btn-dl,.btn-user{
   display: inline-block;
   padding: 6px 12px;
   font-size: 14px; 
   font-weight: 600;
   color: #333; 
-  background-color: #e6e6e6;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -57,6 +55,12 @@ header.header div.header__bar.row div.grid-6 a.post {
   text-decoration: none;
   transition: background-color 0.3s, transform 0.2s;
   margin-right: 10px;
+}
+.btn-dl{
+  background-color: rgb(147, 214, 128); 
+}
+.btn-user {
+  background-color: lightgrey; 
 }
 
 .btn-user:hover {
