--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,11 @@
           </div>
         <% end %>
       </div>
-      
+
     </header>
+      <% flash.each do |name, msg| %>
+       <%= content_tag :div, msg, class: name %>
+      <% end %>
 
     <%= yield %>
   </body>
