more description 連携（仮）

--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -42,7 +42,7 @@
 <h3 id="show-summary" data-summary="<%= @record.article_summary %>">▶️ Article Summary</h3>
 
 <%= link_to @record.url,  url, target: "_blank" %><br><br>
-<button id="fetch-info-btn" data-url="<%= @record.url %>">Fetch New Info</button>
+<button id="fetch-info-button" data-url="<%= @record.url %>">Fetch New Info</button>
 <br><br>
  </div>
  
