--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -41,6 +41,9 @@
 <h3 id="show-description" data-description="<%= @record.business_description %>">▶️ For more description</h3>
 <h3 id="show-summary" data-summary="<%= @record.article_summary %>">▶️ Article Summary</h3>
 
+<button id="description_renew" data-url="<%= @record.url %>">description_renew</button>
+
+
  </div>
  
  <div class="bp-detail-right">
@@ -90,3 +93,7 @@
 </div>
 <div class="more-description">
 </div>
+
+<script>
+  var apiKey = "<%= @api_key %>";
+</script>
