--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -88,5 +88,7 @@
 
 </div>
 </div>
+<button id="read-aloud" class="btn btn-primary">Read Aloud</button>
+<button id="toggle-pause" class="btn btn-secondary">Pause/Resume</button>
 <div class="more-description">
 </div>
