--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -91,8 +91,9 @@
 
 </div>
 </div>
-<div class="more-description">
+<div id="more-description" class="more-description">
 </div>
+
 
 <script>
   var apiKey = "<%= @api_key %>";
