--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -39,10 +39,9 @@
    <%= @record.city %>,<%= @record.country %> <br>
    <%= @record.sub_industry %>(Sub-industry)<br><br>
 <h3 id="show-description" data-description="<%= @record.business_description %>">▶️ For more description</h3>
-<h3 id="show-summary" data-summary="<%= @record.article_summary %>">▶️ Article Summary</h3>
-
 <button id="description_renew" data-url="<%= @record.url %>">description_renew</button>
-
+<button id="save_description" record-id="<%= @record.id %>">Save</button>
+<h3 id="show-summary" data-summary="<%= @record.article_summary %>">▶️ Article Summary</h3>
 
  </div>
  
