--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,22 +22,23 @@
             <ul class="user__info">
               <li>
               <% if current_user.approved? || current_user.admin? %>
-             <%= link_to "csv Download",download_page_records_path , class: "btn-dl" %> 
+<%= link_to image_tag('dl.png', alt: 'csv Download'), download_page_records_path, class: "btn-icon"  %>
+
               <%end %>
 
 
 
               <%if current_user.admin?%>
-              <%= link_to "Admin", users_path , class: "btn-user" %>
+              <%= link_to image_tag('key.png', alt: 'Admin'),users_path , class: "btn-icon" %>
               <%end%>
-                <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-user signup"  %>
+              <%= link_to image_tag('logout.png', alt: 'Log out'), destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-icon" %>
               </li>
             </ul>
           </span>
           </div>
         <% else %>
           <div class="grid-6">
-            <%= link_to "Log in", new_user_session_path, class: "btn-user" %>
+            <%= link_to image_tag('login.png', alt: 'Log in'), new_user_session_path, class: "btn-icon" %>
             <%= link_to "Sign up", new_user_registration_path, class: "btn-user signup" %>
           </div>
         <% end %>
