--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,7 +1,7 @@
 
 header.header {
   padding: 3px;
-  background-color:#F3f3f3;;
+  background-color:#c0b6b6ac;;
   position: fixed;
   top: 0;
   left: 0;
