article_summary_ewnewの修正

--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -104,7 +104,7 @@
   
   <!-- Article Summaryのボタン -->
   <div id="summary-buttons" style="display:none;">
-    <button id="article_summary_renew" article_summary="<%= @record.article_summary %>" class="no-style-button">Update</button>
+    <button id="article_summary_renew" news_snippet="<%= @record.news_snippet %>" class="no-style-button">Update</button>
     <button id="save_article_summary" record-id="<%= @record.id %>" class="no-style-button">Save</button>
   </div>
 </div>
