読み上げポイントにid追加

--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -124,8 +124,8 @@
 
 
 
-<button id="read-aloud" class="no-style-button-2 hidden-btn">
-  <%= image_tag('play-pause.png', alt: 'Read Aloud') %>
+<button id="read-aloud" class="no-style-button-2 hidden-btn" data-record-id="<%= @record.id %>" >
+  <%= image_tag('play-pause.png', alt: 'Read Aloud')%>
 </button>
 </div>
 </div>
