--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -124,7 +124,7 @@
 
 
 
-<button id="read-aloud" class="no-style-button-2 hidden-btn" data-record-id="<%= @record.id %>" >
+<button id="read-aloud" class="no-style-button-2 hidden-btn"  record-id="<%= @record.id %>" >
   <%= image_tag('play-pause.png', alt: 'Read Aloud')%>
 </button>
 </div>
