--- a/app/views/records/partner_details.html.erb
+++ b/app/views/records/partner_details.html.erb
@@ -127,6 +127,9 @@
 <button id="read-aloud" class="no-style-button-2 hidden-btn"  record-id="<%= @record.id %>" >
   <%= image_tag('play-pause.png', alt: 'Read Aloud')%>
 </button>
+<button id="read-stop" class="no-style-button-2 hidden-btn"  record-id="<%= @record.id %>" >
+  <%= image_tag('stop.png', alt: 'Stop')%>
+</button>
 </div>
 </div>
 <div id="more-description" class="more-description">
